@@ -62,4 +62,45 @@
 * 应用程序类加载器
 
 
+---
 
+###补充
+Java程序运行时，不是一运行就把全部类都加载到内存中（方法区），而是按需加载
+
+静态代码块是在类第一次实例化的时候才初始化的
+
+
+
+#### 类加载的宏观的简单过程
+Java程序运行的场所是内存，当在命令行下执行：
+java HelloWorld命令的时候，JVM会将HelloWorld.class加载到内存中，并形成一个Class的对象HelloWorld.class。
+
+其中的过程就是类加载过程：
+
+1. 寻找jre目录，寻找jvm.dll，并初始化JVM；
+
+2. 产生一个Bootstrap Loader（启动类加载器）；
+3. Bootstrap Loader自动加载Extended Loader（标准扩展类加载器），并将其父Loader设为Bootstrap Loader。
+4. Bootstrap Loader自动加载AppClass Loader（系统类加载器），并将其父Loader设为Extended Loader。
+5. 最后由AppClass Loader加载HelloWorld类。
+
+
+####类加载器各自搜索的目录
+为了弄清楚这个问题，首先还要看看System类的API doc文档。
+
+1. Bootstrap Loader（启动类加载器）：加载System.getProperty("sun.boot.class.path")所指定的路径或jar。
+
+2. Extended Loader（标准扩展类加载器ExtClassLoader）：加载System.getProperty("java.ext.dirs")所指定的路径或jar。在使用Java运行程序时，也可以指定其搜索路径，例如：java -Djava.ext.dirs=d:/projects/testproj/classes HelloWorld
+3. AppClass Loader（系统类加载器AppClassLoader）：加载System.getProperty("java.class.path")所指定的路径或jar。在使用Java运行程序时，也可以加上-cp来覆盖原有的Classpath设置，例如： java -cp ./lavasoft/classes HelloWorld
+ExtClassLoader和AppClassLoader在JVM启动后，会在JVM中保存一份，并且在程序运行中无法改变其搜索路径。如果想在运行时从其他搜索路径加载类，就要产生新的类加载器。
+
+
+####类加载器的特点
+1. 运行一个程序时，总是由AppClass Loader（系统类加载器）开始加载指定的类。
+2. 在加载类时，每个类加载器会将加载任务上交给其父，如果其父找不到，再由自己去加载。 
+3. Bootstrap Loader（启动类加载器）是最顶级的类加载器了，其父加载器为null.
+
+所以Android的插件式方案可以类用类加载的原理来实现
+
+####参考资料
+https://my.oschina.net/rouchongzi/blog/171046
